--- a/index.html
+++ b/index.html
@@ -35,14 +35,20 @@
             <div class="container">
                 <div class="row">
                     <div class="item">
-                        <img class="item-pic" src="./imgs/1.webp" alt="">
+                        <a class="product" href=""><img class="product-pic" src="./imgs/1.webp" alt=""></a>
+                        <div class="product-info"></div>
                     </div>
                     <div class="item">
-                        <img class="item-pic" src="./imgs/2.webp" alt="">
+                        <a class="product"href=""><img class="product-pic" src="./imgs/2.webp" alt=""></a>
                     </div>
                     <div class="item">
-                        <img class="item-pic" src="./imgs/3.webp" alt="">
+                        <a class="product"href=""><img class="product-pic" src="./imgs/3.webp" alt=""></a>
                     </div>
+                    <div class="item">
+                        <a class="product"href=""><img class="product-pic" src="./imgs/4.webp" alt=""></a>
+                    </div>
+
+
 
                 </div>
             </div>
