--- a/index.html
+++ b/index.html
@@ -35,9 +35,21 @@
             <div class="container">
                 <div class="row">
                     <div class="item">
-                        <a class="product" href=""><img class="product-pic" src="./imgs/1.webp" alt=""></a>
-                        <div class="product-info"></div>
+                        <a class="product" href=""><img class="product-pic" src="./imgs/1.webp" alt="">
+                            <div class="img-info">
+                                <span class="discount">-50%</span><span class="material">Sostenibilità</span>
+                            </div>
+                            <div class="like">
+                                &hearts;
+                            </div>
+                        </a>
+                        <div class="product-info">
+                            <div class="product-brand">Levi's</div>
+                            <h4 class="product-descr">RELAXED FIT TEE UNISEX</h4>
+                            <div class="product-price"><span class="discounted">14,99€</span><span><del> 29,99€</del></span></div>
+                        </div>
                     </div>
+
                     <div class="item">
                         <a class="product"href=""><img class="product-pic" src="./imgs/2.webp" alt=""></a>
                     </div>
