--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <section>
             <div class="container">
                 <div class="row">
+
                     <div class="item">
                         <a class="product" href=""><img class="product-pic" src="./imgs/1.webp" alt="">
                             <div class="img-info">
@@ -51,14 +52,83 @@
                     </div>
 
                     <div class="item">
-                        <a class="product"href=""><img class="product-pic" src="./imgs/2.webp" alt=""></a>
+                        <a class="product"href=""><img class="product-pic" src="./imgs/2.webp" alt="">
+                            <div class="img-info">
+                                <span class="discount">-30%</span>
+                            </div>
+                            <div class="like">
+                                &hearts;
+                            </div>
+                        </a>
+                        <div class="product-info">
+                            <div class="product-brand">Guess</div>
+                            <h4 class="product-descr">ROSES TEE</h4>
+                            <div class="product-price"><span class="discounted">20,99€</span><span><del> 29,99€</del></span></div>
+                        </div>
                     </div>
+                    
                     <div class="item">
-                        <a class="product"href=""><img class="product-pic" src="./imgs/3.webp" alt=""></a>
+                        <a class="product"href=""><img class="product-pic" src="./imgs/3.webp" alt="">
+                            <div class="img-info">
+                                <span class="discount">-30%</span>
+                            </div>
+                            <div class="like">
+                                &hearts;
+                            </div>
+                        </a>
+                        <div class="product-info">
+                            <div class="product-brand">Come Zucchero Filato</div>
+                            <h4 class="product-descr">VOGLIA DI COLORI PASTELLO</h4>
+                            <div class="product-price"><span class="discounted">129,99€</span><span><del> 184,99€</del></span></div>
+                        </div>
                     </div>
+
                     <div class="item">
-                        <a class="product"href=""><img class="product-pic" src="./imgs/4.webp" alt=""></a>
+                        <a class="product"href=""><img class="product-pic" src="./imgs/4.webp" alt="">
+                            <div class="img-info">
+                                <span class="discount">-50%</span><span class="material">Sostenibilità</span>
+                            </div>
+                            <div class="like">
+                                &hearts;
+                            </div>
+                        </a>
+                        <div class="product-info">
+                            <div class="product-brand">Levi's</div>
+                            <h4 class="product-descr">TEE UNISEX</h4>
+                            <div class="product-price"><span class="discounted">14,99€</span><span><del> 29,99€</del></span></div>
+                        </div>
                     </div>
+
+                    <div class="item">
+                        <a class="product"href=""><img class="product-pic" src="./imgs/5.webp" alt="">
+                            <div class="like">
+                                &hearts;
+                            </div>
+                        </a>
+                        <div class="product-info">
+                            <div class="product-brand">Maya Deluxe</div>
+                            <h4 class="product-descr">STRIPE BODICE</h4>
+                            <div class="product-price"><span class="discounted">99,99€</span></div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <a class="product"href=""><img class="product-pic" src="./imgs/6.webp" alt="">
+                            <div class="img-info">
+                                <span class="material">Sostenibilità</span>
+                            </div>
+                            <div class="like">
+                                &hearts;
+                            </div>
+                        </a>
+                        <div class="product-info">
+                            <div class="product-brand">Esprit</div>
+                            <h4 class="product-descr">MAGLIONE - BLACK</h4>
+                            <div class="product-price"><span class="discounted">29,99€</span></div>
+                        </div>
+                    </div>
+                    
+
 
 
 
