--- a/index.html
+++ b/index.html
@@ -127,11 +127,6 @@
                             <div class="product-price"><span class="discounted">29,99€</span></div>
                         </div>
                     </div>
-                    
-
-
-
-
                 </div>
             </div>
         </section>
@@ -139,6 +134,28 @@
 
     <footer>
         <section>
+            <div class="container">
+                <div class="author-info">
+                    <h3>Boolando s.r.l</h3>
+                    <div class="legal-info">
+                        <a href="">Informazioni legali</a>
+                        <a href="">Informativa sulla privacy</a>
+                        <a href="">Diritto di recesso</a>
+                    </div>
+                </div>
+
+                <div class="social-icons">
+                    <h4>Trovaci anche su</h4>
+                    <i class="fa-brands fa-square-twitter"></i>
+                    <i class="fa-brands fa-square-instagram"></i>
+                    <i class="fa-brands fa-square-facebook"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-pinterest"></i>
+
+                </div>
+
+            </div>
+
         </section>
     </footer>
 </body>
