--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                 <div class="row">
 
                     <div class="item">
-                        <a class="product" href=""><img class="product-pic" src="./imgs/1.webp" alt="">
+                        <a class="product" href="">
+                            <img class="product-pic" src="./imgs/1.webp" alt="">
+                            <img class="hover-img" src="./imgs/1b.webp" alt="">
                             <div class="img-info">
                                 <span class="discount">-50%</span><span class="material">Sostenibilità</span>
                             </div>
@@ -52,7 +54,9 @@
                     </div>
 
                     <div class="item">
-                        <a class="product"href=""><img class="product-pic" src="./imgs/2.webp" alt="">
+                        <a class="product"href="">
+                            <img class="product-pic" src="./imgs/2.webp" alt="">
+                            <img class="hover-img" src="imgs/2b.webp" alt="">
                             <div class="img-info">
                                 <span class="discount">-30%</span>
                             </div>
@@ -68,7 +72,9 @@
                     </div>
                     
                     <div class="item">
-                        <a class="product"href=""><img class="product-pic" src="./imgs/3.webp" alt="">
+                        <a class="product"href="">
+                            <img class="product-pic" src="./imgs/3.webp" alt="">
+                            <img class="hover-img" src="imgs/3b.webp" alt="">
                             <div class="img-info">
                                 <span class="discount">-30%</span>
                             </div>
@@ -84,7 +90,9 @@
                     </div>
 
                     <div class="item">
-                        <a class="product"href=""><img class="product-pic" src="./imgs/4.webp" alt="">
+                        <a class="product"href="">
+                            <img class="product-pic" src="./imgs/4.webp" alt="">
+                            <img class="hover-img" src="imgs/4b.webp" alt="">
                             <div class="img-info">
                                 <span class="discount">-50%</span><span class="material">Sostenibilità</span>
                             </div>
@@ -100,7 +108,9 @@
                     </div>
 
                     <div class="item">
-                        <a class="product"href=""><img class="product-pic" src="./imgs/5.webp" alt="">
+                        <a class="product"href="">
+                            <img class="product-pic" src="./imgs/5.webp" alt="">
+                            <img class="hover-img" src="imgs/5b.webp" alt="">
                             <div class="like">
                                 &hearts;
                             </div>
@@ -113,7 +123,9 @@
                     </div>
 
                     <div class="item">
-                        <a class="product"href=""><img class="product-pic" src="./imgs/6.webp" alt="">
+                        <a class="product"href="">
+                            <img class="product-pic" src="./imgs/6.webp" alt="">
+                            <img class="hover-img" src="imgs/6b.webp" alt="">
                             <div class="img-info">
                                 <span class="material">Sostenibilità</span>
                             </div>
